refined api.
Allow instant creation of users through social media
